--- a/sample/index.html
+++ b/sample/index.html
@@ -14,6 +14,26 @@
 <body>
     <div id="box" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, suscipit inventore? At aliquid tempore sit unde illo. Amet aspernatur corrupti inventore repellendus quidem magnam neque veritatis ratione, distinctio, deserunt dolorum harum dignissimos.</div>
 
+!--  <style>
+        #box{background-color: blue;}
+    </style>  -->
+    <link rel="stylesheet" href="style.css">
+     <!-- <style> 
+      #btn{
+        background-color: blue;
+      }
+    </style> -->
+</head>
+
+<body> 
+    <h1 class="heading">HTML</h1>
+    <h2 class="heading">CSS</h2>
+    <h3 class="heading">JS</h3>
+    <div id="box" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, suscipit inventore? At aliquid tempore sit unde illo. Amet aspernatur corrupti inventore repellendus quidem magnam neque veritatis ratione, distinctio, deserunt dolorum harum dignissimos.</div>
+     <br>
+    <button id="btn" style="background-color: pink;">ok</button>
+
+
 
 
 
